--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
   "author": "Adrian Dinca",
   "license": "MIT",
   "dependencies": {
-    "loader-utils": "^1.1.0"
+    "loader-utils": "^1.1.0",
+    "user": "0.0.0"
   },
   "peerDependencies": {
     "ejs": "^2.6.1"
