--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ejs-plain-loader",
-  "version": "1.0.3",
+  "version": "1.1.0",
   "description": "EJS webpack loader",
   "repository": {
     "type": "git",
@@ -24,8 +24,7 @@
   "author": "Adrian Dinca",
   "license": "MIT",
   "dependencies": {
-    "loader-utils": "^1.1.0",
-    "user": "0.0.0"
+    "loader-utils": "^1.1.0"
   },
   "peerDependencies": {
     "ejs": "^2.6.1"
