--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "author": "Adrian Dinca",
   "license": "MIT",
   "dependencies": {
+    "eval": "^0.1.2",
     "loader-utils": "^1.1.0"
   }
 }
