--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ejs-plain-loader",
-  "version": "1.3.1",
+  "version": "1.3.2",
   "description": "EJS webpack loader",
   "repository": {
     "type": "git",
@@ -19,7 +19,12 @@
     "lodash",
     "_",
     "webpack",
-    "template"
+    "template",
+    "require",
+    "import",
+    "js",
+    "javascript",
+    "json"
   ],
   "author": "Adrian Dinca",
   "license": "MIT",
