--- a/package.json
+++ b/package.json
@@ -28,8 +28,19 @@
   ],
   "author": "Adrian Dinca",
   "license": "MIT",
+  "scripts": {
+    "test": "jest"
+  },
   "dependencies": {
     "eval": "^0.1.2",
     "loader-utils": "^1.1.0"
+  },
+  "devDependencies": {
+    "babel-jest": "^23.6.0",
+    "babel-preset-env": "^1.7.0",
+    "html-loader": "^0.5.5",
+    "jest": "^23.6.0",
+    "memory-fs": "^0.4.1",
+    "webpack": "^4.26.1"
   }
 }
