--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-  - "8"
-script:
+  - "10"
+install:
   - npm install
+script:
+  - npm test
 branches:
   only:
   - master
